// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: block;
  overflow: hidden;
}

.c2 {
  display: inline-block;
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  width: 100%;
}

.c8 {
  position: absolute;
  height: 1.5px;
  top: 0px;
  left: 0%;
  background-color: hsla(218,89%,51%,1);
  pointer-events: none;
}

.c10 {
  border-bottom-width: 1.5px;
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-bottom-style: solid;
}

.c6 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c7 {
  color: hsla(218,89%,51%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c11 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  padding-top: 4px;
  padding-bottom: 16px;
  padding-left: 20px;
  padding-right: 20px;
  background-color: transparent;
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1.5px;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
}

.c5:hover {
  border-bottom-color: hsla(216,15%,54%,0.18);
  background-color: transparent;
}

.c5:disabled {
  cursor: not-allowed;
  background-color: transparent;
}

.c5:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  background-color: transparent;
}

.c5 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c9 {
  cursor: pointer;
}

.c9:hover {
  background-color: hsla(218,89%,51%,0.18);
}

.c3::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width:320px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:320px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    border-bottom-style: solid;
  }
}

<body>
  <div>
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
            role="tablist"
          >
            <button
              aria-controls="tabs-1-payments-tabpanel"
              aria-selected="false"
              class="c5"
              data-active=""
              id="tabs-1-payments-tabitem"
              role="tab"
              tabindex="0"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payments
              </p>
            </button>
            <button
              aria-controls="tabs-1-refunds-tabpanel"
              aria-selected="true"
              class="c5"
              id="tabs-1-refunds-tabitem"
              role="tab"
              tabindex="-1"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Refunds
              </p>
            </button>
          </div>
          <div
            class="c8 c9"
            data-blade-component="base-box"
            pointer-events="none"
            style="transition-property: transform, width, background-color; transition-duration: 0ms; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); width: 0px; transform: translate(0px, -2px);"
          />
        </div>
        <div
          class="c10"
          data-blade-component="base-box"
          style="transform: translateY(-5.5px);"
        />
      </div>
      <div
        aria-labelledby="tabs-1-refunds-tabitem"
        class=""
        data-blade-component="base-box"
        id="tabs-1-refunds-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c11"
          data-blade-component="text"
        >
          Refunds
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tabs should render with autoWidth 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: block;
  overflow: hidden;
}

.c2 {
  display: inline-block;
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  width: 100%;
}

.c8 {
  position: absolute;
  height: 1.5px;
  top: 0px;
  left: 0%;
  background-color: hsla(218,89%,51%,1);
  pointer-events: none;
}

.c10 {
  border-bottom-width: 1.5px;
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-bottom-style: solid;
}

.c6 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c7 {
  color: hsla(218,89%,51%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c11 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  width: 100%;
  padding-top: 4px;
  padding-bottom: 16px;
  padding-left: 20px;
  padding-right: 20px;
  background-color: transparent;
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1.5px;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
}

.c5:hover {
  border-bottom-color: hsla(216,15%,54%,0.18);
  background-color: transparent;
}

.c5:disabled {
  cursor: not-allowed;
  background-color: transparent;
}

.c5:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  background-color: transparent;
}

.c5 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c9 {
  cursor: pointer;
}

.c9:hover {
  background-color: hsla(218,89%,51%,0.18);
}

.c3::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width:320px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:320px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    border-bottom-style: solid;
  }
}

<body>
  <div>
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
            role="tablist"
          >
            <button
              aria-controls="tabs-5-payments-tabpanel"
              aria-selected="false"
              class="c5"
              data-active=""
              id="tabs-5-payments-tabitem"
              role="tab"
              tabindex="0"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payments
              </p>
            </button>
            <button
              aria-controls="tabs-5-refunds-tabpanel"
              aria-selected="true"
              class="c5"
              id="tabs-5-refunds-tabitem"
              role="tab"
              tabindex="-1"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Refunds
              </p>
            </button>
          </div>
          <div
            class="c8 c9"
            data-blade-component="base-box"
            pointer-events="none"
            style="transition-property: transform, width, background-color; transition-duration: 0ms; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); width: 0px; transform: translate(0px, -2px);"
          />
        </div>
        <div
          class="c10"
          data-blade-component="base-box"
          style="transform: translateY(-5.5px);"
        />
      </div>
      <div
        aria-labelledby="tabs-5-refunds-tabitem"
        class=""
        data-blade-component="base-box"
        id="tabs-5-refunds-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c11"
          data-blade-component="text"
        >
          Refunds
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tabs should render with filled variant 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: block;
  overflow: hidden;
}

.c2 {
  display: inline-block;
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  width: 100%;
  gap: 2px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 2px;
  border-width: 1.5px;
  border-color: hsla(216,15%,54%,0.18);
  border-style: solid;
}

.c7 {
  margin: auto;
  height: 20px;
  border-width: 0px;
  border-left-color: hsla(216,15%,54%,0.09);
  border-style: solid;
}

.c11 {
  position: absolute;
  top: 0px;
  left: 0px;
  background-color: hsla(218,89%,51%,0.09);
  border-radius: 2px;
}

.c6 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c10 {
  color: hsla(218,89%,51%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c13 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 0px;
  padding-right: 0px;
  background-color: transparent;
  border-radius: 2px;
  border-bottom-style: solid;
  border-bottom-width: 0;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
}

.c5:hover {
  border-bottom-color: hsla(216,15%,54%,0.18);
  background-color: hsla(216,15%,54%,0.09);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: transparent;
}

.c5:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  background-color: hsla(216,15%,54%,0.09);
}

.c5 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 0px;
  padding-right: 0px;
  background-color: transparent;
  border-radius: 2px;
  border-bottom-style: solid;
  border-bottom-width: 0;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
}

.c9:hover {
  border-bottom-color: hsla(216,15%,54%,0.18);
  background-color: transparent;
}

.c9:disabled {
  cursor: not-allowed;
  background-color: transparent;
}

.c9:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  background-color: hsla(218,89%,51%,0.18);
}

.c9 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c12 {
  cursor: pointer;
}

.c12:hover {
  background-color: hsla(218,89%,51%,0.18);
}

.c8 {
  border-left-style: solid;
  border-left-width: 1px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 20px;
}

.c3::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width:320px) {
  .c4 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c7 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c7 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c7 {
    border-style: solid;
  }
}

<body>
  <div>
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
            role="tablist"
          >
            <button
              aria-controls="tabs-4-payments-tabpanel"
              aria-selected="false"
              class="c5"
              data-active=""
              id="tabs-4-payments-tabitem"
              role="tab"
              tabindex="0"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payments
              </p>
            </button>
            <div
              class="c7 c8"
              data-blade-component="divider"
              role="separator"
            />
            <button
              aria-controls="tabs-4-refunds-tabpanel"
              aria-selected="true"
              class="c9"
              id="tabs-4-refunds-tabitem"
              role="tab"
              tabindex="-1"
            >
              <p
                class="c10"
                data-blade-component="text"
              >
                Refunds
              </p>
            </button>
          </div>
          <div
            class="c11 c12"
            data-blade-component="base-box"
            style="transition-property: transform, width, background-color; transition-duration: 0ms; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); width: 0px; height: 0px; transform: translate(0px, -1px);"
          />
        </div>
      </div>
      <div
        aria-labelledby="tabs-4-refunds-tabitem"
        class=""
        data-blade-component="base-box"
        id="tabs-4-refunds-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c13"
          data-blade-component="text"
        >
          Refunds
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tabs should render with size 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: block;
  overflow: hidden;
}

.c2 {
  display: inline-block;
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  width: 100%;
}

.c8 {
  position: absolute;
  height: 1.5px;
  top: 0px;
  left: 0%;
  background-color: hsla(218,89%,51%,1);
  pointer-events: none;
}

.c10 {
  border-bottom-width: 1.5px;
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-bottom-style: solid;
}

.c6 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

.c7 {
  color: hsla(218,89%,51%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

.c11 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  padding-top: 4px;
  padding-bottom: 12px;
  padding-left: 20px;
  padding-right: 20px;
  background-color: transparent;
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1.5px;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
}

.c5:hover {
  border-bottom-color: hsla(216,15%,54%,0.18);
  background-color: transparent;
}

.c5:disabled {
  cursor: not-allowed;
  background-color: transparent;
}

.c5:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  background-color: transparent;
}

.c5 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c9 {
  cursor: pointer;
}

.c9:hover {
  background-color: hsla(218,89%,51%,0.18);
}

.c3::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width:320px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c8 {
    pointer-events: none;
  }
}

@media screen and (min-width:320px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c10 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    border-bottom-style: solid;
  }
}

<body>
  <div>
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
            role="tablist"
          >
            <button
              aria-controls="tabs-6-payments-tabpanel"
              aria-selected="false"
              class="c5"
              data-active=""
              id="tabs-6-payments-tabitem"
              role="tab"
              tabindex="0"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payments
              </p>
            </button>
            <button
              aria-controls="tabs-6-refunds-tabpanel"
              aria-selected="true"
              class="c5"
              id="tabs-6-refunds-tabitem"
              role="tab"
              tabindex="-1"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Refunds
              </p>
            </button>
          </div>
          <div
            class="c8 c9"
            data-blade-component="base-box"
            pointer-events="none"
            style="transition-property: transform, width, background-color; transition-duration: 0ms; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); width: 0px; transform: translate(0px, -2px);"
          />
        </div>
        <div
          class="c10"
          data-blade-component="base-box"
          style="transform: translateY(-5.5px);"
        />
      </div>
      <div
        aria-labelledby="tabs-6-refunds-tabitem"
        class=""
        data-blade-component="base-box"
        id="tabs-6-refunds-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c11"
          data-blade-component="text"
        >
          Refunds
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tabs should render with vertical orientation 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c2 {
  height: 100%;
  width: 1.5px;
  background-color: hsla(216,15%,54%,0.18);
}

.c3 {
  display: inline-block;
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 0px;
  width: 100%;
}

.c7 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9 {
  color: hsla(218,89%,51%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c10 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  gap: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  padding-right: 12px;
  background-color: transparent;
  border-radius: 0;
  border-left-style: solid;
  border-left-width: 1.5px;
  border-left-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
}

.c6:hover {
  border-left-color: hsla(216,15%,54%,0.18);
  background-color: transparent;
}

.c6:disabled {
  cursor: not-allowed;
  background-color: transparent;
}

.c6:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  background-color: transparent;
}

.c6 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  gap: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  padding-right: 12px;
  background-color: transparent;
  border-radius: 0;
  border-left-style: solid;
  border-left-width: 1.5px;
  border-left-color: hsla(218,89%,51%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
}

.c8:hover {
  border-left-color: hsla(218,89%,51%,1);
  background-color: transparent;
}

.c8:disabled {
  cursor: not-allowed;
  background-color: transparent;
}

.c8:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  background-color: transparent;
}

.c8 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c4::-webkit-scrollbar {
  display: none;
}

<body>
  <div>
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
          style="transform: translateX(1.5px);"
        />
        <div
          class="c3 c4"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
            role="tablist"
          >
            <button
              aria-controls="tabs-3-payments-tabpanel"
              aria-selected="false"
              class="c6"
              data-active=""
              id="tabs-3-payments-tabitem"
              role="tab"
              tabindex="0"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Payments
              </p>
            </button>
            <button
              aria-controls="tabs-3-refunds-tabpanel"
              aria-selected="true"
              class="c8"
              id="tabs-3-refunds-tabitem"
              role="tab"
              tabindex="-1"
            >
              <p
                class="c9"
                data-blade-component="text"
              >
                Refunds
              </p>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="tabs-3-refunds-tabitem"
        class=""
        data-blade-component="base-box"
        id="tabs-3-refunds-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c10"
          data-blade-component="text"
        >
          Refunds
        </p>
      </div>
    </div>
  </div>
</body>
`;
